--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Navigation -->
+    <nav id="nav">
+        <a href="#home">HOME</a>
+        <a href="#about">ABOUT</a>
+        <a href="#projects">PROJECTS</a>
+        <a href="#contact">CONTACT</a>
+    </nav>
     <!-- Home Section -->
     <section id="home">
         <div class="title-group">
@@ -26,7 +33,7 @@
     </section>
     <!-- Contact Section -->
     <section id="contact">
-        
+
     </section>
     <!-- Script -->
     <script src="script.js"></script>
